--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
-    "name": "Музыкальный КЛЮЧ",
-    "short_name": "Музыкальный КЛЮЧ",
-    "description": "Приложение для прослушивания радио через прямую ссылку.",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#007bff",
-    "icons": [
-        {
-            "src": "icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "Музыкальный КЛЮЧ",
+  "short_name": "Музыкальный КЛЮЧ",
+  "description": "Прогрессивное веб-приложение для прослушивания радио",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#f0f2f5",
+  "theme_color": "#007bff",
+  "icons": [
+    {
+      "src": "icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
